# curator/internal/db/models.go
@@ -43,6 +43,7 @@ type Profession struct {
 	Description string
 	Position    int16
 	UpdatedAt   time.Time
+	Launched    bool
 }
 
 type ProfessionTopic struct {
@@ -125,6 +126,7 @@ type Topic struct {
 	ParentID    *int64
 	Description string
 	UpdatedAt   time.Time
+	Headline    bool
 }
 
 type TopicHint struct {
@@ -160,6 +162,7 @@ type TopicStat struct {
 	UpdatedAt       time.Time
 	ProfessionUsers int32
 	Views7d         int32
+	Engaged7d       int32
 }
 
 type User struct {
@@ -181,6 +184,12 @@ type UserProfession struct {
 	ProfessionID int64
 }
 
+type UserStoryDismissal struct {
+	UserID      int64
+	StoryID     int64
+	DismissedAt time.Time
+}
+
 type UserStoryState struct {
 	UserID  int64
 	StoryID int64
@@ -188,6 +197,11 @@ type UserStoryState struct {
 }
 
 type UserTopic struct {
+	UserID  int64
+	TopicID int64
+}
+
+type UserTopicMute struct {
 	UserID  int64
 	TopicID int64
 }
